<resources>
    <string name="app_name">NikizInstagram</string>

    <string name="prompt_menu_settings">Settings</string>

    <!-- Toolbar titles -->
    <string name="prompt_toolbar_options">Options</string>
    <string name="prompt_toolbar_edit_profile">Edit Profile</string>

    <!-- Account settings screen -->
    <string name="prompt_account_settings">Account settings</string>
    <string name="prompt_edit_profile_text">Edit Profile</string>
    <string name="prompt_edit_text_username">username</string>
    <string name="prompt_edit_text_display_name">display name</string>
    <string name="prompt_edit_text_website">website</string>
    <string name="prompt_edit_text_email">email</string>
    <string name="prompt_edit_text_phone">phone</string>
    <string name="prompt_edit_text_description">description</string>
    <string name="prompt_private_information">Private information</string>
    <string name="error_username_not_unique">The username already exists</string>
    <string name="prompt_profile_settings_saved">Settings successfully saved</string>


    <!-- Registration (authorization) screen -->
    <string name="prompt_email_hint">Email</string>
    <string name="prompt_password_hint">Password</string>
    <string name="prompt_sign_in">Login</string>
    <string name="prompt_create_account">No account yet? Create one</string>
    <string name="prompt_register_account">REGISTER A NEW ACCOUNT</string>
    <string name="prompt_register">Register</string>
    <string name="error_empty_login">Login can\'t be empty</string>
    <string name="error_incorrect_password">Password must be at least 6 characters length</string>
    <string name="error_incorrect_email">Email is incorrect</string>
    <string name="error_empty_name">Name shouldn\'t be empty</string>
    <string name="prompt_full_name">Full name</string>
    <string name="error_verification_email_send_failed">Verification email sending failed</string>
    <string name="prompt_verification_email_sent">Verification letter sent on your email address</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>

    <!-- Dialogs -->
    <string name="prompt_title_sign_out">Sign out</string>
    <string name="prompt_sign_out">Do you want to exit?</string>
    <string name="prompt_ok">OK</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
