<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/white">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/profilePhoto"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_edit_profile_text"
                android:id="@+id/changeProfilePhoto"
                android:layout_below="@id/profilePhoto"
                android:layout_centerHorizontal="true"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:layout_marginTop="15dp"/>
            
            <RelativeLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_height="50dp"
                android:layout_marginTop="80dp"
                android:layout_below="@id/changeProfilePhoto">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="5dp"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/prompt_edit_text_username"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/displayNameLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/usernameLayout">

                <EditText
                    android:id="@+id/displayNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_display_name"
                    android:drawablePadding="5dp"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/prompt_edit_text_display_name"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/websiteLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/displayNameLayout">

                <EditText
                    android:id="@+id/websiteEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_website"
                    android:drawablePadding="5dp"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/prompt_edit_text_website"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/websiteLayout">

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_description"
                    android:drawablePadding="5dp"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/prompt_edit_text_description"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/privateInformationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionLayout"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="14sp"
                android:text="@string/prompt_private_information"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/privateInformationLabel">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="5dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_edit_text_email"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/emailLayout">

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="5dp"
                    android:inputType="phone"
                    android:hint="@string/prompt_edit_text_phone"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</merge>